css divison + images arrangement

--- a/index.html
+++ b/index.html
@@ -4,7 +4,14 @@
     <meta charset="UTF-8">
     <meta name ="ducky storage bags" content="sklep internetowy z torbami i workami do przechowywania">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link href="css/styles.css" rel="stylesheet" type="text/css" />
+    <!-- change -->
+    <link href="css/main.css" rel="stylesheet" type="text/css" />
+    <!-- DO NOT change -->
+    <link href="css/universal/basics.css" rel="stylesheet" type="text/css" />
+    <link href="css/universal/typography.css" rel="stylesheet" type="text/css" />
+    <link href="css/universal/images.css" rel="stylesheet" type="text/css" />
+    <link href="css/universal/navigation.css" rel="stylesheet" type="text/css" />
+    <link href="css/universal/footer.css" rel="stylesheet" type="text/css" />
     <title>ducky | storage bags</title>
     <link href="https://fonts.googleapis.com/css?family=Poppins:300,600,800&display=swap" rel="stylesheet">
 </head>
@@ -25,7 +32,7 @@
             </div>
         </div>
     </nav>
-    <div class="img-hero">
+    <div class="hero fullwidth-images">
         <!-- <div class="full-width-img">
             <img
                 srcset="images/mobile-hero.jpg 500w,  
@@ -77,7 +84,7 @@
                     Idealna torba na wizyty w piekarni. Dajmy odpocząć ziemi od jednorazówek.
                 </p>
             </div>
-            <div class="product-img"></div>
+            <div class="product-img fullwidth-images"></div>
         </div>
         <div class="product">
             <div class="main-width">
@@ -89,14 +96,14 @@
                     Zastąpi nam jednorazowe zrywki oraz przedłuży świeżość produktów w lodówce 
                 </p>
             </div>
-            <div class="product-img"></div>
+            <div class="product-img fullwidth-images"></div>
         </div>
     </section>
 <!-- INSTAGRAM -->
     <!-- <section class="instagram">
     </section> -->
-<!-- FOOTER -->
-    <div class="logo-full"></div>
+    <!-- FOOTER -->
+    <div class="logo-bottom"></div>
     <footer>
         <p class="footer">all rights reserved 2020 || created by <a href="" class="link-underline">agata kmiecińska</a></p>
     </footer>
