--- a/index.html
+++ b/index.html
@@ -12,37 +12,27 @@
     <link href="css/universal/images.css" rel="stylesheet" type="text/css" />
     <link href="css/universal/navigation.css" rel="stylesheet" type="text/css" />
     <link href="css/universal/footer.css" rel="stylesheet" type="text/css" />
-    <title>ducky | storage bags</title>
+    <title>ducky | torby do spiżarni</title>
     <link href="https://fonts.googleapis.com/css?family=Poppins:300,600,800&display=swap" rel="stylesheet">
 </head>
 <body>
 <!-- NAVIGATION -->
     <nav>
         <div class="main-width">
-            <p class="bold slogan">naturalne torby do domowej spiżarni</p>
+            <p class="slogan">naturalne torby do domowej spiżarni</p>
                 <a href="index.html">
                     <div class="nav-logo">
                         <img src="images/ducky_logo.png" class="logo" alt="ducky logo" title="ducky logo">
                     </div>
                 </a>
             <div class="nav-links">
-                <a href="sklep.html">sklep</a>
+                <a href="shop.html">sklep</a>
                 <a href="about.html">o ducky</a>
                 <a href="about.html/#contact">kontakt</a>
             </div>
         </div>
     </nav>
-    <div class="hero fullwidth-images">
-        <!-- <div class="full-width-img">
-            <img
-                srcset="images/mobile-hero.jpg 500w,  
-                images/ipad-hero.jpg 900w,             
-                images/desktop-hero.jpg 1300w"
-                sizes="(min-width: 1300px) 1300px, (min-width: 737px) 900px, 500px"
-                src="images/desktop-hero.jpg"
-                        alt="hero ducky">
-        </div> -->
-    </div>
+    <div class="hero fullwidth-images main"></div>
 <!-- ABOUT -->
     <section class="about main-width">
         <div class="about-slogan">
@@ -84,7 +74,7 @@
                     Idealna torba na wizyty w piekarni. Dajmy odpocząć ziemi od jednorazówek.
                 </p>
             </div>
-            <div class="product-img fullwidth-images"></div>
+            <div class="product-img fullwidth-images main-shop"></div>
         </div>
         <div class="product">
             <div class="main-width">
@@ -96,12 +86,9 @@
                     Zastąpi nam jednorazowe zrywki oraz przedłuży świeżość produktów w lodówce 
                 </p>
             </div>
-            <div class="product-img fullwidth-images"></div>
+            <div class="product-img fullwidth-images main-shop"></div>
         </div>
     </section>
-<!-- INSTAGRAM -->
-    <!-- <section class="instagram">
-    </section> -->
     <!-- FOOTER -->
     <div class="logo-bottom"></div>
     <footer>
@@ -109,3 +96,17 @@
     </footer>
 </body>
 </html>
+
+
+
+
+
+        <!-- <div class="full-width-img">
+            <img
+                srcset="images/mobile-hero.jpg 500w,  
+                images/ipad-hero.jpg 900w,             
+                images/desktop-hero.jpg 1300w"
+                sizes="(min-width: 1300px) 1300px, (min-width: 737px) 900px, 500px"
+                src="images/desktop-hero.jpg"
+                        alt="hero ducky">
+        </div> -->
