--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
         
     </section>
 <!-- SHOP -->
-    <section class="shop">
+    <section class="main-products">
         <div class="product">
             <div class="main-width">
                 <a href="sklep.html">
