--- a/index.html
+++ b/index.html
@@ -19,16 +19,16 @@
 <!-- NAVIGATION -->
     <nav>
         <div class="main-width">
-            <p class="slogan">naturalne torby do domowej spiżarni</p>
+            <p class="slogan bold">naturalne torby do domowej spiżarni</p>
                 <a href="index.html">
                     <div class="nav-logo">
                         <img src="images/ducky_logo.png" class="logo" alt="ducky logo" title="ducky logo">
                     </div>
                 </a>
             <div class="nav-links">
-                <a href="shop.html">sklep</a>
-                <a href="about.html">o ducky</a>
-                <a href="about.html/#contact">kontakt</a>
+                <a href="shop.html" class="bold">sklep</a>
+                <a href="about.html" class="bold">o ducky</a>
+                <a href="about.html/#contact" class="bold">kontakt</a>
             </div>
         </div>
     </nav>
@@ -40,24 +40,19 @@
         </div>
         <hr class="disable">
         <div class="about-text">
-            <h2 class="bold">            
-                kochamy jeść i kochamy szyć 
+            <h2>            
+                kochamy jeść i uwielbiamy szyć 
             </h2>
             <p class="bold">
                 Dlatego stworzyliśmy markę, która pozwoli nam dłużej cieszyć się świeżością naszych ulubionych produktów spożywczych. A przy okazji nie marnujemy jedzenia i ograniczamy zużycie plastiku.
-            </p>
+            </p>         
             <p>
                 Ducky to niewielka polska firma, projektująca 
-                oraz szyjąca torby do przechowywania produktów w twojej spiżarce lub lodówce. 
-                <br>
-                <br>
+                oraz szyjąca torby do przechowywania produktów w twojej spiżarce lub lodówce.
                 Wszystkie nasze produkty są wykonane z naturalnych materiałów, <a href="" class="link-underline">bawełny</a> i <a href="" class="link-underline">polskiego lnu</a>. Te wyjątkowe surowce mogą stać się alternatywą dla osób, które chcą ograniczyć w swoim codziennym życiu ilość zużywanego plastiku.
-                <br>
-                <br>
-                Każda nasza torba została uszyta w Polsce, jest wielokrotnego użytku i w 100% biodegradowalna.
-                <br>
-                <br>
-                Więcej o nas i naszej firmie znajdziesz <a href="" class="link-underline">tutaj</a>.
+            <p>
+                Każda nasza torba została uszyta w Polsce, jest wielokrotnego użytku i w 100% biodegradowalna. Więcej o nas i naszej firmie znajdziesz <a href="" class="link-underline">tutaj</a>.
+            </p>
             </p>
         </div>
         
@@ -65,25 +60,26 @@
 <!-- SHOP -->
     <section class="main-products">
         <div class="product">
-            <div class="main-width">
+            <div class="main-width desktop">
                 <a href="sklep.html">
-                    <h1>torba</h1>
+                    <h2>torba</h2>
                 </a>
-                <h3>rolowana bawełniana torba na chleb i inne przysmaki</h3>
-                <p>
-                    Idealna torba na wizyty w piekarni. Dajmy odpocząć ziemi od jednorazówek.
+                <h3>rolowana torba bawełniana na wypieki oraz inne wyjątkowe przysmaki</h3>
+                <p class="bold">
+                    To nasza idealna torba na pyszne wizyty w piekarni albo markecie. Wystarczy tylko schować rano do torebki. Ale jej główną zaletą jest to, że możemy w niej również przechowywać chleb w domu.
                 </p>
             </div>
             <div class="product-img fullwidth-images main-shop"></div>
+
         </div>
         <div class="product">
-            <div class="main-width">
+            <div class="main-width desktop">
                 <a href="sklep.html">
-                    <h1>worek</h1>
+                    <h2>worek</h2>
                 </a>
                 <h3>lniany worek na zakupy <br class="disable">i do przechowywania </h3>
-                <p>
-                    Zastąpi nam jednorazowe zrywki oraz przedłuży świeżość produktów w lodówce 
+                <p class="bold">
+                    Zastąpi nam jednorazowe zrywki oraz przedłuży świeżość produktów w lodówce. Daje ona produktom oddychać, ale zachowuje ich naturalną wilgotność, dzięki czemu nie pleśnieją ani nie wysychają.
                 </p>
             </div>
             <div class="product-img fullwidth-images main-shop"></div>
