--- a/empty.html
+++ b/empty.html
@@ -12,7 +12,7 @@
     <link href="css/universal/images.css" rel="stylesheet" type="text/css" />
     <link href="css/universal/navigation.css" rel="stylesheet" type="text/css" />
     <link href="css/universal/footer.css" rel="stylesheet" type="text/css" />
-    <title>ducky | sklep</title>
+    <title>ducky | torby do spiżarni</title>
     <link href="https://fonts.googleapis.com/css?family=Poppins:300,600,800&display=swap" rel="stylesheet">
 </head>
 <body>
@@ -25,16 +25,16 @@
                         <img src="images/ducky_logo.png" class="logo" alt="ducky logo" title="ducky logo">
                     </div>
                 </a>
-                <div class="nav-links">
-                    <a href="shop.html" class="bold">sklep</a>
-                    <a href="about.html" class="bold">o ducky</a>
-                    <a href="contact.html/#kontakt" class="bold">kontakt</a>
-                </div>
+            <div class="nav-links">
+                <a href="shop.html" class="bold">sklep</a>
+                <a href="about.html" class="bold">o ducky</a>
+                <a href="about.html/#contact" class="bold">kontakt</a>
+            </div>
         </div>
     </nav>
-    <div class="hero fullwidth-images shop"></div>
+    <div class="hero fullwidth-images main"></div>
 <!-- CONTENT -->
-    <section></section>
+
 
 <!-- footer -->
     <div class="logo-bottom"></div>
