--- a/index.html
+++ b/index.html
@@ -25,11 +25,11 @@
                         <img src="images/ducky_logo.png" class="logo" alt="ducky logo" title="ducky logo">
                     </div>
                 </a>
-            <div class="nav-links">
-                <a href="shop.html" class="bold">sklep</a>
-                <a href="about.html" class="bold">o ducky</a>
-                <a href="about.html/#contact" class="bold">kontakt</a>
-            </div>
+                <div class="nav-links">
+                    <a href="shop.html" class="bold">sklep</a>
+                    <a href="about.html" class="bold">o ducky</a>
+                    <a href="contact.html/#kontakt" class="bold">kontakt</a>
+                </div>
         </div>
     </nav>
     <div class="hero fullwidth-images main"></div>
@@ -49,9 +49,9 @@
             <p>
                 Ducky to niewielka polska firma, projektująca 
                 oraz szyjąca torby do przechowywania produktów w twojej spiżarce lub lodówce.
-                Wszystkie nasze produkty są wykonane z naturalnych materiałów, <a href="" class="link-underline">bawełny</a> i <a href="" class="link-underline">polskiego lnu</a>. Te wyjątkowe surowce mogą stać się alternatywą dla osób, które chcą ograniczyć w swoim codziennym życiu ilość zużywanego plastiku.
+                Wszystkie nasze produkty są wykonane z naturalnych materiałów, <a href="about.html" class="link-underline">bawełny</a> i <a href="about.html" class="link-underline">polskiego lnu</a>. Te wyjątkowe surowce mogą stać się alternatywą dla osób, które chcą ograniczyć w swoim codziennym życiu ilość zużywanego plastiku.
             <p>
-                Każda nasza torba została uszyta w Polsce, jest wielokrotnego użytku i w 100% biodegradowalna. Więcej o nas i naszej firmie znajdziesz <a href="" class="link-underline">tutaj</a>.
+                Każda nasza torba została uszyta w Polsce, jest wielokrotnego użytku i w 100% biodegradowalna. Więcej o nas i naszej firmie znajdziesz <a href="about.html" class="link-underline">tutaj</a>.
             </p>
             </p>
         </div>
