--- a/about.html
+++ b/about.html
@@ -12,7 +12,7 @@
     <link href="css/universal/images.css" rel="stylesheet" type="text/css" />
     <link href="css/universal/navigation.css" rel="stylesheet" type="text/css" />
     <link href="css/universal/footer.css" rel="stylesheet" type="text/css" />
-    <title>ducky | sklep</title>
+    <title>ducky | o nas</title>
     <link href="https://fonts.googleapis.com/css?family=Poppins:300,600,800&display=swap" rel="stylesheet">
 </head>
 <body>
@@ -32,9 +32,9 @@
                 </div>
         </div>
     </nav>
-    <div class="hero fullwidth-images shop"></div>
+    <div class="hero fullwidth-images about-us"></div>
 <!-- CONTENT -->
-    <section></section>
+
 
 <!-- footer -->
     <div class="logo-bottom"></div>
