main - section shop - 2 columns

--- a/about.html
+++ b/about.html
@@ -26,14 +26,24 @@
                     </div>
                 </a>
                 <div class="nav-links">
-                    <a href="shop.html" class="bold">sklep</a>
-                    <a href="about.html" class="bold">o ducky</a>
-                    <a href="contact.html/#kontakt" class="bold">kontakt</a>
+                    <a href="shop.html" class="extra-bold">sklep</a>
+                    <a href="about.html" class="extra-bold">o ducky</a>
+                    <a href="contact.html/#kontakt" class="extra-bold">kontakt</a>
                 </div>
         </div>
     </nav>
     <div class="hero fullwidth-images about-us"></div>
 <!-- CONTENT -->
+    <section class="about-welcome main-width">
+        <div class="about-slogan">
+            <h1>o ducky</h1>
+        </div>
+        <div class="about-text">
+            <p class="bold">
+                Projekt "ducky" kiełkował w mojej głowie od kilku lat. Dopiero po odziedziczeniu maszyny do szycia od jednej z babć i intensywnej nauce szycia woreczków dla całej rodziny i przyjaciół, zdecydowałam się stworzyć markę, która będzie moim dzieckiem.
+            </p>         
+        </div>
+    </section>
 
 
 <!-- footer -->
