--- a/shop.html
+++ b/shop.html
@@ -26,15 +26,33 @@
                     </div>
                 </a>
                 <div class="nav-links">
-                    <a href="shop.html" class="bold">sklep</a>
-                    <a href="about.html" class="bold">o ducky</a>
-                    <a href="contact.html/#kontakt" class="bold">kontakt</a>
+                    <a href="shop.html" class="extra-bold">sklep</a>
+                    <a href="about.html" class="extra-bold">o ducky</a>
+                    <a href="contact.html/#kontakt" class="extra-bold">kontakt</a>
                 </div>
         </div>
     </nav>
     <div class="hero fullwidth-images shop"></div>
 <!-- CONTENT -->
-    <section></section>
+    <section class="shop-welcome main-width">
+        <div class="about-slogan">
+            <h1>witamy<br class="disable"> w sklepie</h1>
+        </div>
+        <div class="about-text">
+            <p class="bold">
+                Projektujemy i szyjemy torby do domu. Mają one być proste, naturalne i przyjemne dla oka. Mają pomóc nam uporządkować nasze spiżarnie, czyli zarówno szafki jak i lodówki. Możemy ich używać także do wszelkiej organizacji w naszym domu. Doskonale sprawdzą się do segregowania i przechowywania bielizny, akcesoriów kuchennych, kosmetyków, tkanin w domu.
+            </p>
+            <p>
+                Zastosowaliśmy materiały, które są wytrzymałe i do wielokrotnego wykorzystania, dzięki czemu będą nam służyć przez długi czas.
+            </p>
+            <p>
+                Nasze produkty możemy prać w wysokiej temperaturze. Będziemy mieli wtedy pewność, że są one idealnie czyste i higieniczne. Kochają różnież wysoką temperaturę i ekologiczne proszki do prania. Nasze torby nie boją się żelazka, a wręcz przeciwnie, prasowanie po każdym praniu spowoduje, że dłużej będą wyglądać dobrze.
+            </p>
+        </div>
+    </section>
+    <section class="shop-products">
+
+    </section>
 
 <!-- footer -->
     <div class="logo-bottom"></div>
