--- a/index.html
+++ b/index.html
@@ -26,9 +26,9 @@
                     </div>
                 </a>
                 <div class="nav-links">
-                    <a href="shop.html" class="bold">sklep</a>
-                    <a href="about.html" class="bold">o ducky</a>
-                    <a href="contact.html/#kontakt" class="bold">kontakt</a>
+                    <a href="shop.html" class="extra-bold">sklep</a>
+                    <a href="about.html" class="extra-bold">o ducky</a>
+                    <a href="contact.html/#kontakt" class="extra-bold">kontakt</a>
                 </div>
         </div>
     </nav>
@@ -60,11 +60,11 @@
 <!-- SHOP -->
     <section class="main-products">
         <div class="product">
-            <div class="main-width desktop">
+            <div class="main-width description">
                 <a href="sklep.html">
-                    <h2>torba</h2>
+                    <h2>torba z bawełny</h2>
                 </a>
-                <h3>rolowana torba bawełniana na wypieki oraz inne wyjątkowe przysmaki</h3>
+                <h3>torba bawełniana na wypieki oraz chleb</h3>
                 <p class="bold">
                     To nasza idealna torba na pyszne wizyty w piekarni albo markecie. Wystarczy tylko schować rano do torebki. Ale jej główną zaletą jest to, że możemy w niej również przechowywać chleb w domu.
                 </p>
@@ -73,13 +73,13 @@
 
         </div>
         <div class="product">
-            <div class="main-width desktop">
+            <div class="main-width">
                 <a href="sklep.html">
-                    <h2>worek</h2>
+                    <h2>lniany worek</h2>
                 </a>
-                <h3>lniany worek na zakupy <br class="disable">i do przechowywania </h3>
+                <h3>na zakupy <br class="disable">i do przechowywania </h3>
                 <p class="bold">
-                    Zastąpi nam jednorazowe zrywki oraz przedłuży świeżość produktów w lodówce. Daje ona produktom oddychać, ale zachowuje ich naturalną wilgotność, dzięki czemu nie pleśnieją ani nie wysychają.
+                    Zastąpi nam jednorazowe zrywki oraz przedłuży świeżość produktów w lodówce. Daje ona produktom oddychać, ale zachowuje ich naturalną wilgotność, dzięki czemu nie pleśnieją ani tak szybko nie wysychają.
                 </p>
             </div>
             <div class="product-img fullwidth-images main-shop"></div>
