main - section shop - 1 column - small changes

--- a/index.html
+++ b/index.html
@@ -60,29 +60,31 @@
 <!-- SHOP -->
     <section class="main-products">
         <div class="product">
-            <div class="main-width description">
+            <div class="main-width">
+                <p class="bold">NO. 1</p>
                 <a href="sklep.html">
                     <h2>torba z bawełny</h2>
+                    <h3>na pieczywo, wypieki oraz inne przysmaki</h3>
                 </a>
-                <h3>torba bawełniana na wypieki oraz chleb</h3>
-                <p class="bold">
-                    To nasza idealna torba na pyszne wizyty w piekarni albo markecie. Wystarczy tylko schować rano do torebki. Ale jej główną zaletą jest to, że możemy w niej również przechowywać chleb w domu.
-                </p>
             </div>
             <div class="product-img fullwidth-images main-shop"></div>
+            <p class="main-width-half">
+                To nasza idealna torba na pyszne wizyty w piekarni albo markecie. Wystarczy tylko schować rano do torebki. Ale jej główną zaletą jest to, że możemy w niej również przechowywać chleb w domu.
+            </p>
 
         </div>
         <div class="product">
             <div class="main-width">
+                <p class="bold">NO. 2</p>
                 <a href="sklep.html">
                     <h2>lniany worek</h2>
+                    <h3>na zakupy i do przechowywania </h3>
                 </a>
-                <h3>na zakupy <br class="disable">i do przechowywania </h3>
-                <p class="bold">
-                    Zastąpi nam jednorazowe zrywki oraz przedłuży świeżość produktów w lodówce. Daje ona produktom oddychać, ale zachowuje ich naturalną wilgotność, dzięki czemu nie pleśnieją ani tak szybko nie wysychają.
-                </p>
             </div>
             <div class="product-img fullwidth-images main-shop"></div>
+            <p class="main-width-half">
+                Zastąpi nam jednorazowe zrywki oraz przedłuży świeżość produktów w lodówce. Daje ona produktom oddychać, ale zachowuje ich naturalną wilgotność, dzięki czemu nie pleśnieją ani tak szybko nie wysychają.
+            </p>
         </div>
     </section>
     <!-- FOOTER -->
