main - section shop - done

--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
                 </a>
             </div>
             <div class="product-img fullwidth-images main-shop"></div>
-            <p class="main-width-half">
+            <p class="main-width main-width-half">
                 To nasza idealna torba na pyszne wizyty w piekarni albo markecie. Wystarczy tylko schować rano do torebki. Ale jej główną zaletą jest to, że możemy w niej również przechowywać chleb w domu.
             </p>
 
@@ -82,7 +82,7 @@
                 </a>
             </div>
             <div class="product-img fullwidth-images main-shop"></div>
-            <p class="main-width-half">
+            <p class="main-width main-width-half">
                 Zastąpi nam jednorazowe zrywki oraz przedłuży świeżość produktów w lodówce. Daje ona produktom oddychać, ale zachowuje ich naturalną wilgotność, dzięki czemu nie pleśnieją ani tak szybko nie wysychają.
             </p>
         </div>
