about + contact v.1 done (deleted shop)

--- a/about.html
+++ b/about.html
@@ -4,14 +4,15 @@
     <meta charset="UTF-8">
     <meta name ="ducky storage bags" content="sklep internetowy z torbami i workami do przechowywania">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <!-- change -->
-    <link href="css/main.css" rel="stylesheet" type="text/css" />
+
     <!-- DO NOT change -->
     <link href="css/universal/basics.css" rel="stylesheet" type="text/css" />
     <link href="css/universal/typography.css" rel="stylesheet" type="text/css" />
     <link href="css/universal/images.css" rel="stylesheet" type="text/css" />
     <link href="css/universal/navigation.css" rel="stylesheet" type="text/css" />
     <link href="css/universal/footer.css" rel="stylesheet" type="text/css" />
+    <!-- change -->
+    <link href="css/about.css" rel="stylesheet" type="text/css" />
     <title>ducky | o nas</title>
     <link href="https://fonts.googleapis.com/css?family=Poppins:300,600,800&display=swap" rel="stylesheet">
 </head>
@@ -28,26 +29,53 @@
                 <div class="nav-links">
                     <a href="shop.html" class="extra-bold">sklep</a>
                     <a href="about.html" class="extra-bold">o ducky</a>
-                    <a href="contact.html/#kontakt" class="extra-bold">kontakt</a>
+                    <a href="about.html#contact" class="extra-bold">kontakt</a>
                 </div>
         </div>
     </nav>
     <div class="hero fullwidth-images about-us"></div>
 <!-- CONTENT -->
+    <div class="logo-full"></div>
     <section class="about-welcome main-width">
-        <div class="about-slogan">
-            <h1>o ducky</h1>
-        </div>
-        <div class="about-text">
-            <p class="bold">
+        <div class="about-text-column">
+            <p>
                 Projekt "ducky" kiełkował w mojej głowie od kilku lat. Dopiero po odziedziczeniu maszyny do szycia od jednej z babć i intensywnej nauce szycia woreczków dla całej rodziny i przyjaciół, zdecydowałam się stworzyć markę, która będzie moim dzieckiem.
-            </p>         
+            </p>
+            <p>
+                Candy jelly-o pastry cheesecake cotton candy. Powder macaroon chocolate powder gummi bears halvah cake cake. Fruitcake pie icing macaroon gummies candy dragée. Croissant chupa chups chocolate bar. Toffee cookie chocolate cake danish. Caramels soufflé topping apple pie cake croissant jujubes sweet roll cake. Toffee sugar plum cake. Muffin halvah caramels dessert candy sweet roll. Pastry cotton candy dragée apple pie dessert. Gummies chupa chups gummies dessert marshmallow pudding apple pie. Macaroon pudding dessert liquorice. Chocolate bar icing gummi bears fruitcake jelly caramels dragée candy. Tootsie roll macaroon chocolate tiramisu.
+            </p>
+            <p>
+                Apple pie caramels cotton candy marshmallow candy toffee tiramisu. Cookie lollipop tiramisu. Jujubes liquorice cake. Bear claw toffee tiramisu soufflé muffin oat cake pudding marzipan gummies. Tootsie roll lemon drops bear claw.
+            </p>
         </div>
+        <div class="about-text-column">
+            <p>
+                Candy jelly-o pastry cheesecake cotton candy. Powder macaroon chocolate powder gummi bears halvah cake cake. Fruitcake pie icing macaroon gummies candy dragée. Croissant chupa chups chocolate bar. Toffee cookie chocolate cake danish. Caramels soufflé topping apple pie cake croissant jujubes sweet roll cake. Toffee sugar plum cake. Muffin halvah caramels dessert candy sweet roll. Pastry cotton candy dragée apple pie dessert. Gummies chupa chups gummies dessert marshmallow pudding apple pie. Macaroon pudding dessert liquorice. Chocolate bar icing gummi bears fruitcake jelly caramels dragée candy. Tootsie roll macaroon chocolate tiramisu.
+            </p>
+            <p>
+                Apple pie gummi bears candy soufflé carrot cake. Tootsie roll chocolate cake jelly beans lollipop. Apple pie muffin dragée cookie jelly-o apple pie ice cream ice cream sweet. Halvah topping cheesecake croissant cake ice cream danish pudding. Biscuit icing biscuit jelly beans pudding. Lollipop sweet candy. Chocolate bar donut toffee sugar plum tiramisu lollipop toffee oat cake. Apple pie caramels cotton candy marshmallow candy toffee tiramisu. Cookie lollipop tiramisu. Jujubes liquorice cake. Bear claw toffee tiramisu soufflé muffin oat cake pudding marzipan gummies. Tootsie roll lemon drops bear claw.
+            </p>
+        </div>
+    </section>
+    <hr>
+    <section id="contact" class="main-width">
+        <h2>kontakt</h2>
+        <p>W razie jakichkolwiek pytań, prosimy o kontakt:</p>
+        <h3>Ducky Bags</h3>
+        <p class="bold">
+            Ducky Bags
+            <br>
+            ul. Ducky Bags, Polska
+            <br>
+            <a href="mailto:kontakt@duckybags.com" class="e-mail bold">kontakt@duckybags.com</a>
+            <br>
+            +48 900 989 890
+        </p>
+
     </section>
 
 
 <!-- footer -->
-    <div class="logo-bottom"></div>
     <footer>
         <p class="footer">all rights reserved 2020 || created by <a href="" class="link-underline">agata kmiecińska</a></p>
     </footer>
