--- a/index.html
+++ b/index.html
@@ -4,14 +4,14 @@
     <meta charset="UTF-8">
     <meta name ="ducky storage bags" content="sklep internetowy z torbami i workami do przechowywania">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <!-- change -->
-    <link href="css/main.css" rel="stylesheet" type="text/css" />
     <!-- DO NOT change -->
     <link href="css/universal/basics.css" rel="stylesheet" type="text/css" />
     <link href="css/universal/typography.css" rel="stylesheet" type="text/css" />
     <link href="css/universal/images.css" rel="stylesheet" type="text/css" />
     <link href="css/universal/navigation.css" rel="stylesheet" type="text/css" />
     <link href="css/universal/footer.css" rel="stylesheet" type="text/css" />
+    <!-- change -->
+    <link href="css/main.css" rel="stylesheet" type="text/css" />
     <title>ducky | torby do spiżarni</title>
     <link href="https://fonts.googleapis.com/css?family=Poppins:300,600,800&display=swap" rel="stylesheet">
 </head>
@@ -28,7 +28,7 @@
                 <div class="nav-links">
                     <a href="shop.html" class="extra-bold">sklep</a>
                     <a href="about.html" class="extra-bold">o ducky</a>
-                    <a href="contact.html/#kontakt" class="extra-bold">kontakt</a>
+                    <a href="about.html#contact" class="extra-bold">kontakt</a>
                 </div>
         </div>
     </nav>
@@ -38,7 +38,6 @@
         <div class="about-slogan">
             <h1>naturalne torby <br class="disable">do domowej spiżarni</h1>
         </div>
-        <hr class="disable">
         <div class="about-text">
             <h2>            
                 kochamy jeść i uwielbiamy szyć 
@@ -55,7 +54,6 @@
             </p>
             </p>
         </div>
-        
     </section>
 <!-- SHOP -->
     <section class="main-products">
@@ -71,7 +69,6 @@
             <p class="main-width main-width-half">
                 To nasza idealna torba na pyszne wizyty w piekarni albo markecie. Wystarczy tylko schować rano do torebki. Ale jej główną zaletą jest to, że możemy w niej również przechowywać chleb w domu.
             </p>
-
         </div>
         <div class="product">
             <div class="main-width">
@@ -88,7 +85,7 @@
         </div>
     </section>
     <!-- FOOTER -->
-    <div class="logo-bottom"></div>
+    <div class="logo-full"></div>
     <footer>
         <p class="footer">all rights reserved 2020 || created by <a href="" class="link-underline">agata kmiecińska</a></p>
     </footer>
