after gatsby commit (contact + about changes)

--- a/about.html
+++ b/about.html
@@ -29,13 +29,12 @@
                 <div class="nav-links">
                     <a href="shop.html" class="extra-bold">sklep</a>
                     <a href="about.html" class="extra-bold">o ducky</a>
-                    <a href="about.html#contact" class="extra-bold">kontakt</a>
+                    <a href="contact.html" class="extra-bold">kontakt</a>
                 </div>
         </div>
     </nav>
     <div class="hero fullwidth-images about-us"></div>
 <!-- CONTENT -->
-    <div class="logo-full"></div>
     <section class="about-welcome main-width">
         <div class="about-text-column">
             <p>
@@ -57,27 +56,9 @@
             </p>
         </div>
     </section>
-    <hr>
-    <section id="contact" class="main-width">
-        <h2>kontakt</h2>
-        <p>W razie jakichkolwiek pytań, prosimy o kontakt:</p>
-        <h3>Ducky Bags</h3>
-        <p class="bold">
-            Ducky Bags
-            <br>
-            ul. Ducky Bags, Polska
-            <br>
-            <a href="mailto:kontakt@duckybags.com" class="e-mail bold">kontakt@duckybags.com</a>
-            <br>
-            +48 900 989 890
-        </p>
-
-    </section>
-
-
 <!-- footer -->
     <footer>
-        <p class="footer">all rights reserved 2020 || created by <a href="" class="link-underline">agata kmiecińska</a></p>
+        <p class="footer">all rights reserved 2020 || created by <a href="https://www.behance.net/agatakmiecinska" class="link-underline" target="_blank">agata kmiecińska</a></p>
     </footer>
 </body>
 </html>
