--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
                 <div class="nav-links">
                     <a href="shop.html" class="extra-bold">sklep</a>
                     <a href="about.html" class="extra-bold">o ducky</a>
-                    <a href="about.html#contact" class="extra-bold">kontakt</a>
+                    <a href="contact.html" class="extra-bold">kontakt</a>
                 </div>
         </div>
     </nav>
@@ -87,7 +87,7 @@
     <!-- FOOTER -->
     <div class="logo-full"></div>
     <footer>
-        <p class="footer">all rights reserved 2020 || created by <a href="" class="link-underline">agata kmiecińska</a></p>
+        <p class="footer">all rights reserved 2020 || created by <a href="https://www.behance.net/agatakmiecinska" target="_blank" class="link-underline">agata kmiecińska</a></p>
     </footer>
 </body>
 </html>
