--- a/contact.html
+++ b/contact.html
@@ -34,16 +34,19 @@
         </div>
     </nav>
     <div class="hero fullwidth-images contact"></div>
-    <div class="logo-full"></div>
     <section id="contact" class="main-width">
-        <h2>skontaktuj się z nami</h2>
+        <h2>kontakt</h2>
+        <p class="main-width-half">Skontaktuj się z nami, najlepiej mailowo lub telefonicznie, <br />jeśli masz pytania, chcesz podjąć z nami współpracę lub zareklamować produkt.</p>
+        <br />
+        <div class="nav-logo">
+            <img src="images/ducky_logo.png" class="logo" alt="ducky logo" title="ducky logo">
+        </div>
         <p class="bold">
-            <h3>Ducky Bags</h3>
-            <br>
-            ul. Ducky Bags, 00-100 Polska
-            <br>
-            <a href="mailto:kontakt@duckybags.com">kontakt@duckybags.com</a> | 
-            <a href="tel:48-900-900-900">+48 900 900 900</a>
+            Ducky Bags Ltd.<br />
+            ul. Kaczowa 20/7, 00-100 Polska
+            <br />
+            <a href="mailto:kontakt@duckybags.com" class="bold"> kontakt@duckybags.com</a><br />
+            <a href="tel:48-900-900-900" class="bold">+48 900 900 900</a>
         </p>
     </section>
 <!-- footer -->
