--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
         </div>
         <div class="about-text">
             <h2>            
-                kochamy jeść i uwielbiamy szyć 
+                kochamy jeść i szyć
             </h2>
             <p class="bold">
                 Dlatego stworzyliśmy markę, która pozwoli nam dłużej cieszyć się świeżością naszych ulubionych produktów spożywczych. A przy okazji nie marnujemy jedzenia i ograniczamy zużycie plastiku.
